invidious/anubis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anubis
  namespace: invidious
spec:
  selector:
    matchLabels:
      app: anubis
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: anubis
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
        public: "true"
      containers:
      - name: anubis
        image: ghcr.io/acheong08/go-away:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: bot-policies
          mountPath: /policy.yml
          subPath: policy.yml
      volumes:
      - name: bot-policies
        configMap:
          name: anubis-bot-policies
---
apiVersion: v1
kind: Service
metadata:
  name: anubis
  namespace: invidious
spec:
  type: ClusterIP
  selector:
    app: anubis
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
