invidious/invidious.yaml
# Deployment with node affinity
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invidious
  namespace: invidious
spec:
  replicas: 1
  selector:
    matchLabels:
      app: invidious
  template:
    metadata:
      labels:
        app: invidious
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
        home: "true"
      enableServiceLinks: false
      containers:
      - name: invidious
        image: ghcr.io/acheong08/invidious:neko
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: config
          mountPath: /etc/invidious/config.yml
          subPath: config.yml
          readOnly: true
      volumes:
      - name: config
        configMap:
          name: invidious-config
          items:
          - key: config.yml
            path: config.yml
      securityContext:
        seccompProfile:
          type: RuntimeDefault

---
# Service Exposure
apiVersion: v1
kind: Service
metadata:
  name: invidious
  namespace: invidious
spec:
  type: ClusterIP
  selector:
    app: invidious
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
