invidious/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: invidious-ingress-iv
  namespace: invidious
  labels:
    app: invidious
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    spec.ingressClassName: traefik
spec:
  rules:
    - host: iv.duti.dev
      http:
        paths:
          - path: /companion/videoplayback
            pathType: Exact
            backend:
              service:
                name: caddy
                port:
                  number: 80
          - path: /fonts/
            pathType: Prefix
            backend:
              service:
                name: caddy
                port:
                  number: 80
          - path: /companion/
            pathType: Prefix
            backend:
              service:
                name: invidious-companion
                port:
                  number: 8282
          - path: /
            pathType: Prefix
            backend:
              service:
                name: anubis
                port:
                  number: 80
  tls:
    - hosts:
        - iv.duti.dev
      secretName: invidious-tls
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: invidious-ingress-poketube
#   namespace: invidious
#   labels:
#     app: invidious
#   annotations:
#     cert-manager.io/cluster-issuer: letsencrypt-production
#     spec.ingressClassName: traefik
# spec:
#   rules:
#     - host: poketube.duti.dev
#       http:
#         paths:
#           - path: /api/v1/videos/
#             pathType: Prefix
#             backend:
#               service:
#                 name: anubis
#                 port:
#                   number: 80
#   tls:
#     - hosts:
#         - poketube.duti.dev
#       secretName: poketube-tls
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caddy
  namespace: invidious
spec:
  replicas: 1
  selector:
    matchLabels:
      app: caddy
  template:
    metadata:
      labels:
        app: caddy
    spec:
      nodeSelector:
        home: "true"
      containers:
      - name: caddy
        image: caddy:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: caddy-config-volume
          mountPath: /etc/caddy
      volumes:
      - name: caddy-config-volume
        configMap:
          name: caddy-config
          items:
          - key: Caddyfile
            path: Caddyfile
---
apiVersion: v1
kind: Service
metadata:
  name: caddy
  namespace: invidious
spec:
  type: ClusterIP
  selector:
    app: caddy
  ports:
    - port: 80
      targetPort: 80
